crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_alias_top_level.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
typealias NameMap<T> = Map<String, T>

val names: NameMap<Int> = emptyMap()

diagnostics:
(none)
