crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_annotations_on_function_types.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
annotation class Composable

annotation class Fancy(val name: String)

fun render(
  menu: @Composable () -> Unit,
  map: @Composable (PaddingValues) -> Unit,
  trailingContent: @Composable (() -> Unit)? = null,
  decorated: @Fancy("label") String,
) = Unit

class PaddingValues

diagnostics:
(none)
