crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_definitely_non_nullable.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun <T> requireValue(value: T & Any): T & Any = value

diagnostics:
(none)
