crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_nullable_function_and_context_function.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
typealias Callback = context(Logger) (String?) -> Unit

typealias NamedCallback = (value: String?, count: Int) -> Unit

val callback: Callback = { value -> println(value) }

interface Logger

diagnostics:
(none)
