crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_projections_and_star.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class TypeProjections(
  val input: List<out Number>,
  val output: MutableList<in Int>,
  val unknown: List<*>,
)

diagnostics:
(none)
