crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_type_suspend_receiver_and_parenthesized_function_types.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
typealias Suspended = suspend (String) -> Int

typealias ReceiverBlock = String.(Int) -> Unit

typealias NullableCallback = ((String?) -> Unit)?

val receiverBlock: ReceiverBlock = { count -> repeat(count) { trim() } }

diagnostics:
(none)
