crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_unary_prefix_and_postfix_operators.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun unary(counter: Counter): Int {
  var index = 0
  val before = ++index + counter.value--
  val after = -before + +index
  return if (!counter.done) after else before
}

diagnostics:
(none)
