crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_when_condition_forms.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun conditionWhen(value: Int): String {
  return when (value) {
    0, 1 -> "small"
    in 2..10 -> "medium"
    !in 11..<20 -> "outside"
    else -> "large"
  }
}

diagnostics:
(none)
