crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_when_multiple_conditions_with_guards.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun guardedConditions(value: Any): String =
  when (value) {
    0, 1 if value.hashCode() >= 0 -> "small"
    is String, is CharSequence if value.toString().isNotEmpty() -> "text"
    else -> "other"
  }

diagnostics:
(none)
