crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_when_subject_binding.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun subjectBinding(input: Any): Int {
  return when (val text = input as? String) {
    null -> 0
    else -> text.length
  }
}

diagnostics:
(none)
