crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__parses_when_subject_guards_and_else.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun guardedWhen(token: Token): String {
  return when (token) {
    is Token.Word if token.text.isNotEmpty() -> "word"
    is Token.Number if token.value > 0 -> "number"
    null -> "missing"
    else -> "other"
  }
}

diagnostics:
(none)
