crates/jolt_kotlin_fmt/tests/snapshots/corpus__syntax__parser__preserves_newline_before_disallowed_binary_operators.snap
---
source: crates/jolt_kotlin_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
fun plus(a: Int, b: Int): Int {
  val result = a
  +b
  return result
}

fun minus(a: Int, b: Int): Int {
  val result = a
  -b
  return result
}

diagnostics:
(none)
